--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,17 +1,22 @@
 #navbar {
+    background-color: transparent;
     width: 100%;
     position: fixed;
+    z-index: 9999;
     padding: 10px;
     color: white;
     font-size: 18px;
+    font-family: 'DM Serif Display', serif;
 
+    /* transition: background-color 1s ease; */
 
 }
 
 #navbar.bg-white {
-    background-color: white;
+    background-color: transparent;
+    backdrop-filter: blur(2px);
     color: #000;
-    transition: background-color 1s ease;
+    /* transition: background-color 0s ease; */
     font-size: 18px;
     font-weight: 500;
 }
