Checkpoint before doing routing

--- a/src/App.css
+++ b/src/App.css
@@ -10,9 +10,15 @@ section.page {
 
 
 #about_page{
-    min-height:70vh;
+    min-height: 70vh;
 }
 
 #projects_page {
     /* border: 1px solid black; */
+}
+
+
+#skills_page {
+
+    /* border: 5px solid blue; */
 }
