--- a/src/components/Projects/information.css
+++ b/src/components/Projects/information.css
@@ -34,19 +34,20 @@
 
 .project_description {
     position: absolute;
-    width: 20%;
+    width: 30%;
 
     margin-bottom: 5%;
     margin-left: 3%;
-    left: 70%;
-    top: 60%;
+    /* left: 1%; */
+    top: 40%;
+    font-size: 25px;
 }
 
 .project_techstack {
     position: absolute;
-    right: 2%;
-    top: 86%;
-    font-size: 20px;
+    left: 3%;
+    top: 32%;
+    font-size: 15px;
 }
 
 
