--- a/src/components/Skills/skills.css
+++ b/src/components/Skills/skills.css
@@ -1,52 +1,67 @@
 #skills {
+    height: 100%;
+    width: 100%;
     position: absolute;
-    display: flex;
-    flex-direction: row;
-    height:100%;
+    text-align: center;    
     overflow-x: hidden;
-    overflow-y: hidden;
+}
+
+#skills_section {
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); /* Three columns with equal width */
+    grid-template-rows: auto auto; /* Two rows with automatic height */
+    justify-items: center;
+    column-gap: 0%;
+    row-gap: 30%;
+    top: 20%;
+
+
+    width: 80%;
+    left: 10%;
+
+    
+}
+
+.skill_class {
+}
+
+.skill_header {
+    font-family: 'DM Serif Display', serif;
+
+    font-size: 25px;
+    margin-bottom: 3%;
+
+}
+
+.skill_type {
+    list-style: none;
+}
+
+.skill {
+    font-family: 'Roboto Slab', serif;
+    margin-bottom: 5px;
+    font-size: 18px;
+
 }
 
 
-#skills #skills_text {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    z-index: 1;
+/* #skills #skills_text {
+    position: absolute;
+    z-index: 10;
     right: 4%;
     width: 50%;
-    top: 35%;
+    top: 20%;
 
     font-family: 'Bodoni Moda', serif;
     font-size: 220px;
     opacity: 0;
-    transform: translateX(100%);
+    transform: translateX(40%);
     transition: opacity 0.5s ease, transform 0.5s ease;
-}
+} 
   
 #skills #skills_text.animate {
     opacity: 0.1;
     transform: translateX(0);
 }
-
-
-#skills #skills_description {
-    position: relative;
-    top: 40%;
-    left: 8%;
-    z-index: 2;
-    width: 50%;
-
-    font-size: 20px;
-    font-family: 'Roboto Slab', serif;
-    opacity: 0;
-    transform: translateX(-100%);
-    transition: opacity 0.5s ease, transform 0.5s ease;
-}
-
-
-  
-#skills #skills_description.animate {
-    opacity: 1;
-    transform: translateX(0);
-}
+ */
