--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,40 @@
-.App {
-    background-color: white;
+#App {
+    background-color: black;
     min-height: 100vh;
+    transition: background-color 0.5s ease;
+}
 
+#App.bg-white {
+    background-color: white;
+    transition: background-color 0.8s ease-out;
+
+}
+
+section.page {
+    min-height: 100vh;
+}
+
+#home_page{
+    min-height: 100vh;
+}
+
+
+#about_page.bg-white {
+    min-height: 90vh;
+    /* background-color: white; */
+
+}
+
+#about_page{
+    min-height: 90vh;
+}
+
+#projects_page {
+    /* border: 1px solid black; */
+}
+
+
+#skills_page {
+    min-height: 90vh;
+    /* border: 5px solid blue; */
 }
