--- a/src/components/Projects/images.css
+++ b/src/components/Projects/images.css
@@ -49,6 +49,41 @@
 }
 
 
+.cli_image1 {
+  left: -10%;
+  position: absolute; 
+  margin-top: 16%;
+  height: 69%;
+  width: 69%;
+  background-position: left;
+}
+
+.cli_image2 {
+  left: -13%;
+  position: absolute; 
+  height: 50%;
+  width: 65%;
+  margin-top: 65%;
+}
+
+.cli_image3 {
+  margin-top: 38%;
+  height: 60%;
+  width: 70%;
+  right: -14%;
+  position: absolute; 
+  background-position: left;
+}
+
+.cli_image4 {
+  height: 45%;
+  margin-top: 74%;
+  width: 60%;
+  right: -9%;
+  position: absolute; 
+  background-position: left;
+}
+
 #aroundnus_img1 {
     background-image: url('img/aroundnus_directions_map_samsung.png');
 }
@@ -64,6 +99,25 @@
 #aroundnus_img4 {
     background-image: url('img/aroundnus_find_nearest_samsung.png');
 }
+
+
+#contech_img1 {
+  background-image: url('img/search_contact.png');
+}
+
+#contech_img2 {
+  background-image: url('img/add_contact.png');
+
+}   
+
+#contech_img3 {
+  background-image: url('img/view_contact.png');
+}
+
+#contech_img4 {
+  background-image: url('img/edit_contact.png');
+}
+
 
 
 
