--- a/src/components/Projects/information.css
+++ b/src/components/Projects/information.css
@@ -45,7 +45,7 @@
 
 .project_techstack {
     position: absolute;
-    left: 3%;
+    left: 5%;
     top: 32%;
     font-size: 15px;
 }
@@ -53,9 +53,26 @@
 
 .project_type {
     font-family: 'DM Serif Display', serif;
-
     position: absolute;
     left: 2%;
     top: 86%;
     font-size: 30px;
 }
+
+.rounded-rectangle {
+    display: inline-block;
+    padding: 8px 16px;
+    border-radius: 17px;
+    background-color: #000;  
+    color: #ffffff;
+}
+
+
+.project_github_link {
+    font-family: 'Geologica', sans-serif;
+    position: absolute;
+    font-size: 20px;
+    top: 86%;
+    left: 25%;
+}
+
