--- a/src/components/NavBar/navbar.css
+++ b/src/components/NavBar/navbar.css
@@ -5,6 +5,8 @@
     z-index: 9999;
     padding: 10px;
     color: white;
+    /* color: rgb(192, 188, 188); */
+
     font-size: 18px;
     font-family: 'DM Serif Display', serif;
 
@@ -18,7 +20,7 @@
     color: #000;
     /* transition: background-color 0s ease; */
     font-size: 18px;
-    font-weight: 580;
+    font-weight: 600;
 }
 
 #navbar::after {
@@ -27,7 +29,7 @@
     bottom: 0;
     left: 15%;
     width: 70%;
-    height: 1px;
+    height: 0.5px;
     background-color: white;
     /* background-clip: content-box; */
 }
@@ -38,11 +40,10 @@
     bottom: 0;
     left: 15%;
     width: 70%;
-    height: 1.5px;
+    height: 1px;
     background-color: black;
     /* background-clip: content-box; */
 }
-
 
 
 #navbar ul {
@@ -54,16 +55,24 @@
     padding: 0 28%;
 }
 
+.navbar_item {
+    opacity: 0.3;
+}
+
 .navbar_item:hover {
-    text-decoration: line-through;
-    text-decoration-thickness: 2px;
-    color:rgb(192, 188, 188);
+    /* text-decoration: line-through;
+    text-decoration-thickness: 2px; */
+    /* color:rgb(192, 188, 188); */
+    opacity: 1;
+
 }
 
 #navbar ul li .active {
-    text-decoration: line-through;
-    text-decoration-thickness: 2px;
-    color: rgb(192, 188, 188);
+    /* text-decoration: line-through;
+    text-decoration-thickness: 2px; */
+    /* color: rgb(192, 188, 188); */
+    /* color: white; */
+    opacity: 1;
     pointer-events: none;
     cursor: default;
 }
