--- a/src/components/Projects/project_information.css
+++ b/src/components/Projects/project_information.css
@@ -5,7 +5,7 @@
     width: 100%;
     height: 100%;
     z-index: 2;
-
+    font-family: 'Geologica', sans-serif; 
 }
 
 .project {
@@ -15,14 +15,18 @@
     height: 100%;
 }
 
-.hidden {
+.projects_info.hidden {
     display: none;
 }
 
-.visible {
-    font-family: 'Geologica', sans-serif;
-    
+
+.project.hidden {
+    display: none;
 }
+
+/* .visible {
+    font-family: 'Geologica', sans-serif; 
+} */
 
 .project_title {
     font-family: 'DM Serif Display', serif;
