--- a/src/components/Projects/project_images.css
+++ b/src/components/Projects/project_images.css
@@ -30,6 +30,7 @@
     margin-top: 16%;
     height: 65%;
     background-position: left;
+    z-index: 4;
 }
 
 .image2 {
@@ -37,6 +38,7 @@
     position: absolute; 
     height: 50%;
     margin-top: 90%;
+    z-index: 1;
 }
 
 .image3 {
@@ -45,6 +47,7 @@
     right: 0%;
     position: absolute; 
     background-position: left;
+    z-index: 3;
   }
 
 .image4 {
@@ -53,6 +56,7 @@
     right: 0%;
     position: absolute; 
     background-position: left;
+    z-index: 2;
 }
 
 
@@ -63,6 +67,7 @@
   height: 69%;
   width: 69%;
   background-position: left;
+  z-index: 3;
 }
 
 .cli_image2 {
@@ -71,6 +76,7 @@
   height: 50%;
   width: 65%;
   margin-top: 65%;
+  z-index: 1;
 }
 
 .cli_image3 {
@@ -80,6 +86,8 @@
   right: -14%;
   position: absolute; 
   background-position: left;
+  z-index: 4;
+
 }
 
 .cli_image4 {
@@ -89,6 +97,8 @@
   right: -9%;
   position: absolute; 
   background-position: left;
+  z-index: 2;
+
 }
 
 #aroundnus_img1 {
