Added separators for projects and change skills text word separator

--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -1,7 +1,14 @@
-#projects {
 
 
-    /* -webkit-perspective: 300px; */
-    /* perspective: 300px; */
+#projects_word {
+    font-family: 'DM Serif Display', serif;
+    font-size: 200px;
+    position: absolute;
+    opacity: 0.1;
+    width: 100%;
+    text-align: right;
+    right: 3%;
+    z-index: 0;
+    margin-top: 6%;
+    /* border: 1px solid red; */
 }
-
