--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -22,7 +22,7 @@
     /* font-style: italic; */
     opacity: 0.1;
     transform: translateX(-30%);
-    transition: opacity 0.5s ease, transform 0.5s ease;
+    transition: transform 0.5s ease;
     line-height: 1;
 }
   
@@ -49,7 +49,7 @@
     font-family: 'Geologica', sans-serif;
     opacity: 0;
     transform: translateX(100%);
-    transition: opacity 0.5s ease, transform 0.5s ease;
+    transition: transform 0.5s ease;
 }
 
 
