--- a/src/components/Projects/project_images.css
+++ b/src/components/Projects/project_images.css
@@ -4,13 +4,15 @@
     width: 50%;
     height: 135vh;
     z-index: 1;
-    left: 43%;
+    left: 40%;
+    /* border: 1px solid red; */
+    
 }
-
 
 
 #contech_images {
   height: 105vh;
+
 }
 
 
@@ -25,26 +27,27 @@
 
 
 .image1 {
-    left: 0%;
+    left: 19%;
     position: absolute; 
     margin-top: 16%;
-    height: 65%;
+    height: 60%;
     background-position: left;
     z-index: 4;
 }
 
 .image2 {
-    left: 0%;
+    left: 14%;
     position: absolute; 
     height: 50%;
-    margin-top: 90%;
+    margin-top: 80%;
     z-index: 1;
 }
 
 .image3 {
-    margin-top: 50%;
-    height: 55%;
-    right: 0%;
+    margin-top: 40%;
+    height: 52%;
+    width: 32%;
+    left: 75%;
     position: absolute; 
     background-position: left;
     z-index: 3;
@@ -52,8 +55,9 @@
 
 .image4 {
     height: 45%;
-    margin-top: 108%;
-    right: 0%;
+    width: 28%;
+    margin-top: 95%;
+    left: 80%;
     position: absolute; 
     background-position: left;
     z-index: 2;
@@ -61,17 +65,17 @@
 
 
 .cli_image1 {
-  left: -12%;
+  left: 0%;
   position: absolute; 
   margin-top: 16%;
   height: 69%;
-  width: 75%;
+  width: 70%;
   background-position: left;
   z-index: 3;
 }
 
 .cli_image2 {
-  left: -13%;
+  left: 2%;
   position: absolute; 
   height: 50%;
   width: 65%;
@@ -81,9 +85,9 @@
 
 .cli_image3 {
   margin-top: 38%;
-  height: 60%;
-  width: 70%;
-  right: -14%;
+  height: 50%;
+  width: 61%;
+  left: 58%;
   position: absolute; 
   background-position: left;
   z-index: 4;
@@ -92,9 +96,9 @@
 
 .cli_image4 {
   height: 45%;
-  margin-top: 74%;
+  margin-top: 78%;
   width: 60%;
-  right: -9%;
+  left: 59%;
   position: absolute; 
   background-position: left;
   z-index: 2;
