--- a/src/components/Projects/project_information.css
+++ b/src/components/Projects/project_information.css
@@ -2,7 +2,7 @@
     /* border: 5px solid red; */
     position: fixed;
     top: 0%;
-    width: 100%;
+    width: 45%;
     height: 100%;
     z-index: 2;
     font-family: 'Geologica', sans-serif; 
@@ -13,6 +13,7 @@
     display: flex;
     flex-direction: column;
     height: 100%;
+    left: 5%;
 }
 
 .projects_info.hidden {
@@ -29,16 +30,19 @@
 } */
 
 .project_title {
+    position: absolute;
     font-family: 'DM Serif Display', serif;
     font-size: 90px;
     margin-bottom: 5%;
-    margin-top: 8%;
+    margin-top: 7%;
+    top: 10%;
+
     margin-left: 3%;
 }
 
 .project_description {
     position: absolute;
-    width: 30%;
+    width: 75%;
 
     margin-bottom: 5%;
     margin-left: 3%;
@@ -49,7 +53,7 @@
 
 .project_techstack {
     position: absolute;
-    left: 5%;
+    left: 7%;
     top: 32%;
     font-size: 15px;
 }
@@ -77,6 +81,6 @@
     position: absolute;
     font-size: 20px;
     top: 86%;
-    left: 25%;
+    left: 330px;
 }
 
